<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>cart</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <mainClass>${mainClass}</mainClass>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
      <groupId>org.springframework.cloud</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>jakarta.validation-api</artifactId>
      <groupId>jakarta.validation</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-security-core</artifactId>
      <groupId>org.springframework.security</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-security-web</artifactId>
      <groupId>org.springframework.security</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-mongodb</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>micrometer-tracing-bridge-brave</artifactId>
      <groupId>io.micrometer</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>zipkin-reporter-brave</artifactId>
      <groupId>io.zipkin.reporter2</groupId>
    </dependency>
    <dependency>
      <artifactId>micrometer-registry-prometheus</artifactId>
      <groupId>io.micrometer</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
    </dependency>
    <dependency>
      <artifactId>aspectjweaver</artifactId>
      <groupId>org.aspectj</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-cloud-starter-feign</artifactId>
      <groupId>org.springframework.cloud</groupId>
      <version>1.4.7.RELEASE</version>
    </dependency>
    <dependency>
      <artifactId>commons-beanutils</artifactId>
      <groupId>commons-beanutils</groupId>
      <version>1.9.4</version>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>spring-cloud-dependencies</artifactId>
        <groupId>org.springframework.cloud</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring-cloud.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <description>cart</description>
  <groupId>latipe</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>cart</name>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.1.2</version> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <java.version>17</java.version>
    <mainClass>latipe.cart.CartApplication</mainClass>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <spring-cloud.version>2022.0.3</spring-cloud.version>
    <springdoc-openapi-starter-webmvc-ui.version>2.0.2</springdoc-openapi-starter-webmvc-ui.version>
  </properties>
  <version>1.0.0-SNAPSHOT</version>
</project>
